@@ -1,4 +1,4 @@
-.TH CJPEG 1 "11 May 2014"
+.TH CJPEG 1 "21 November 2014"
 .SH NAME
 cjpeg \- compress an image file to a JPEG file
 .SH SYNOPSIS
@@ -221,6 +221,9 @@ give more output.  Also, version information is printed at startup.
 .B \-debug
 Same as
 .BR \-verbose .
+.TP
+.B \-version
+Print version information and exit.
 .PP
 The
 .B \-restart
