@@ -1,4 +1,4 @@
-.TH JPEGTRAN 1 "1 January 2013"
+.TH JPEGTRAN 1 "21 November 2014"
 .SH NAME
 jpegtran \- lossless transformation of JPEG files
 .SH SYNOPSIS
@@ -214,6 +214,9 @@ give more output.  Also, version information is printed at startup.
 .B \-debug
 Same as
 .BR \-verbose .
+.TP
+.B \-version
+Print version information and exit.
 .SH EXAMPLES
 .LP
 This example converts a baseline JPEG file to progressive form:
